--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.11.13",
     "@mui/x-data-grid": "^6.0.1",
     "flowbite": "^1.6.4",
