--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.11.13",
     "@mui/x-data-grid": "^6.0.1",
+    "axios": "^1.3.4",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
-    "sort-by": "^1.2.0"
+    "react-toastify": "^9.1.1",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
